# mapleschoolbot

./: .gitignore  config.yaml  pyproject.toml
src/mapleschoolbot/: main.py  maple_auto_farm.py
src/mapleschoolbot/utils/: __init__.py  drawing.py
