[project]
name = "mapleschoolbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy",
    "pillow",
    "keyboard (>=0.13.5,<0.14.0)"
]

[tool.poetry]
packages = [{include = "mapleschoolbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
