[tool.poetry]
name = "mapleschoolbot"
version = "0.1.0"
description = "maple school auto farm bot"
authors = ["xiaomo <xuxiaomo1994@icloud.com>"]
readme = "README.md"
packages = [ { include = "mapleschoolbot", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "*"
numpy = "*"
pillow = "*"
keyboard = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.scripts]
main = "mapleschoolbot.main:main"
